# cmake_example

./: CMakeLists.txt  README.md  test.py
include/: type_utils.h
src/: bindings.cpp  foo.cpp
